Añadido en el pom para convertirlos automaticamente en exe. Se ha añadido un manifest para forzar su arranque como administrador. Cambiado el updater para ejecutar un .exe Actualizado el exe en el servidor. Añadido Icono para la generacion del exe